# hcard

./: .eslintrc.json  .gitattributes  .gitignore  .jshintrc  .rubocop.yml  .snyk  .travis.yml  .vercelignore  CNAME  Cargo.toml  Dockerfile  Gemfile  LICENSE  Procfile  README.md  app.json  callbacks.js  codecov.yml  html5check.sh  index.js  package-lock.json  package.json  tests.js  validate.rb  vercel.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: check-links.yml  deploy.yml  validate.yml
api/: currently_reading.rb  recent_commits.rb  recent_tracks.rb
errors/: 300-latexhax.html  404.html  410.html  500.html
public/: 300-latexhax.html  404.html  410.html  500.html  index.html  robots.txt  sitemap.xml
spec/: currently_reading_spec.rb  recent_commits_spec.rb  recent_tracks_spec.rb  spec_helper.rb
src/: main.rs
src/actix/: cache.rs  error_handlers.rs
src/api/: github.rs  goodreads.rs  lastfm.rs
