[package]
name = "hcard"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
chrono = "0.4"
derive_more = { version = "2", features = ["display", "error", "from"] }
dotenvy = "0.15"
etag-actix-middleware = "0.2"
env_logger = "0.11"
futures = "0.3"
lastfm = "0.10"
minicache = "0.1"
octocrab = "0.49"
pin-project-lite = "0.2"
redact = { version = "0.1", features = ["serde"] }
reqwest = { version = "0.13", features = ["rustls-native-certs"] }
rustls = { version = "0.23", features = ["default"] }
rust-embed-for-web = "11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
xee-xpath = "0.1"
xot = "0.31"

[dependencies.actix-web]
version = "4"
features = [
  "compress-brotli",
  "compress-gzip",
  "compress-zstd",
  "macros",
  "unicode",
]
default-features = false

[dependencies.actix-web-rust-embed-responder]
version = "2"
features = ["support-rust-embed-for-web"]
default-features = false
